--- a/styles.css
+++ b/styles.css
@@ -12,12 +12,14 @@ ol > li::marker {
  
   ul {
     list-style: none;
-    font-size: 20px;
+    font-size: 20px; 
+    font-family: Verdana, Geneva, Tahoma, sans-serif; 
 }
 
  ol {
     list-style-position: inside;
     font-size: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 * {
@@ -27,16 +29,22 @@ ol > li::marker {
 
 h1 {
     font-size: 50px;
+    font-family: fantasy;
 }
 
 h2 {
     font-size: 30px;
+    font-family: fantasy;
 }
 
 p {
     font-size: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-
+.link.normal {
+    font-family: fantasy;
+    
+}
 
 
